# 22202-yureva-OOP-CPP

./: .gitignore
task0/: CMakeLists.txt  CSVFileWriter.cpp  CSVFileWriter.h  DataStorage.cpp  DataStorage.h  FileReader.cpp  FileReader.h  Parser.cpp  Parser.h  main.cpp
task0/Google_tests/: CMakeLists.txt  CSVFileWriter_test.cpp  DataStorage_test.cpp  FileReader_test.cpp  Parser_test.cpp
task1/: BitArray.cpp  BitArray.h  BitArrayException.h  CMakeLists.txt  main.cpp
task1/Google_tests/: BitOperationsTest.cpp  BitPtrTests.cpp  CMakeLists.txt  PushBackTest.cpp  ResizeTest.cpp  SetTests.cpp  ShiftTests.cpp  SwapTests.cpp  ToStringTest.cpp
